basic widget functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
             android:label="@string/title_widget_collection"
             android:enabled="@bool/widget_collection_enabled" >
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />/>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.sam_chordas.android.stockhawk.service.ACTION_DATA_UPDATED"/>
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_collection" />
